--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-autoroutes==0.2.0
-biscuits==0.1.1
-httptools==0.0.10
-multifruits==0.1.0
-curio==0.9
+autoroutes >= 0.2.0
+biscuits >= 0.1.1
+httptools >= 0.0.10
+multifruits >= 0.1.1
+curio >= 0.9
