--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ biscuits >= 0.1.1
 httptools >= 0.0.11
 multifruits >= 0.1.1
 curio >= 0.9
-wsproto >= 0.11.0
+wsproto >= 0.12.0
 pytest
+-e git+https://github.com/trollfot/http-parser.git#egg=http-parser
+-e .
