--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+dist: xenial
 language: python
 sudo: false
 cache: pip
@@ -9,4 +9,4 @@ install:
   - pip install -U -e .[test]
 
 script:
-- pytest tests/
+  - pytest tests/
