--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-autoroutes >= 0.2.0
-biscuits >= 0.1.1
-httptools >= 0.0.11
-multifruits >= 0.1.1
-curio >= 0.9
-wsproto >= 0.12.0
+autoroutes == 0.2.0
+biscuits == 0.2.1
+httptools == 0.0.11
+multifruits == 0.1.4
+curio == 0.9
+wsproto == 0.13.0
 pytest
 -e .
